--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,9 @@
-DONE -> Erledigt
+DE -> Erledigt
 REM  -> Remember/Merke
-Vn	 -> Bsp. V2 geplant fï¿½r Version 2.0
+Vn	 -> Bsp. V2 geplant f?r Version 2.0
 
 allgemein
-(alle)	- Konzept fï¿½r eine Seite
+(alle)	- Konzept f?r eine Seite
 		- Integration von Stats/Docu-Flaws ins Admin-Tool
 		- Tutorial zu Axis und .Net-WSDL.exe
 
@@ -16,14 +16,14 @@ phpSec
 
 
 Admin-Tool (TODOs aus Martins Email)
-		- Menï¿½punkt ï¿½Web Service erstellenï¿½ ist noch nicht implementiert.
+		- Men?punkt ?Web Service erstellen? ist noch nicht implementiert.
 		  evtl. die Standard-Einstellungen aus Settings beachten
 		- es sollte so sein, dass die Quelltext-Doku und die UserDoku in der DB sind. 
 		  Wenn eine Methode neu aufgenommen wird soll die Doku aus dem Source in beide Felder. 
 		  Dann kann der Admin die UserDoku so lassen oder bearbeiten (z.B. auch komplett leer machen). 
-		  Die Quelltext Doku sollte in die DB damit der Admin informiert wird, dass die Doku im Source geï¿½ndert wurde.  
-	DONE    - Menï¿½punkt ï¿½Web Service registrierenï¿½. Hier muss nur noch das letztendliche registrieren gemacht werden.
-		- beim Wizard muss wie erstens noch generiert werden, evtl. bei Settings noch den Pfad fï¿½r das generierte Zeug abfragen.
+		  Die Quelltext Doku sollte in die DB damit der Admin informiert wird, dass die Doku im Source ge?ndert wurde.  
+	DONE    - Men?punkt ?Web Service registrieren?. Hier muss nur noch das letztendliche registrieren gemacht werden.
+		- beim Wizard muss wie erstens noch generiert werden, evtl. bei Settings noch den Pfad f?r das generierte Zeug abfragen.
 		- DOKUMENTIEREN:
 			Funktionsweise, Config-File, PHPBINDir
     DONE- access new WSDL Generator class constants from smarty templates
@@ -34,7 +34,7 @@ Admin-Tool (TODOs aus Martins Email)
     V2  - Ausgabe der Doku Fehler, in optisch ansprechnder Art und Weise
 
 Feedback von Ruedi:
-     - Das Tool verÃ¶ffentlicht mir auch als 'privat' gekennzeichnete
+     - Das Tool veröffentlicht mir auch als 'privat' gekennzeichnete
        Funktionen. Auch ein Underline Name (_) hilft nicht das publizieren zu
        unterbinden.
        Beispiel:
@@ -42,16 +42,16 @@ Feedback von Ruedi:
          <input message="tns:_connectDbIn" /> 
          <output message="tns:_connectDbOut" />
        </operation>
-     - Nach einer Mutation der Klasse ist das Neupublizieren mÃ¼hsam
+     - Nach einer Mutation der Klasse ist das Neupublizieren mühsam
      - Alte, nicht mehr existierende Funktionen bleiben in der db
 
-     - Keine SpeichermÃ¶glichkeit fÃ¼r die Erstellungs-Parameter (jedes Mal
+     - Keine Speichermöglichkeit für die Erstellungs-Parameter (jedes Mal
        neu erfassen)- Re-Registrierung einer bestehenden Klasse 'Klasse registrieren': alles
-       betreffende aus der DB lÃ¶schen, damit alte HÃ¼te verschwinden.
-     - FÃ¼r 'Web Service erstellen', den Parameter der Service Konfiguration
-       etwas Persistenz fÃ¼r die Einstellungen geben.
-     - Ein Filter fÃ¼r Operationen die mit _ im Namen beginnen (private
-       Klassen). Das wÃ¼rde ich relativ rasch finden und dies hÃ¤tte keine
+       betreffende aus der DB löschen, damit alte Hüte verschwinden.
+     - Für 'Web Service erstellen', den Parameter der Service Konfiguration
+       etwas Persistenz für die Einstellungen geben.
+     - Ein Filter für Operationen die mit _ im Namen beginnen (private
+       Klassen). Das würde ich relativ rasch finden und dies hätte keine
        Nebenwirkungen (denke ich).
 
 
@@ -82,20 +82,24 @@ V3   - SOAPServer wich generates WSDL if(!file_exists($wsdl_file)) [may be start
 	 - proper support for ArrayAccess stuff from ExtReflectionApi
      - perhaps a generic doc/lit adapter can be implemented
 
+SOAP
+     - SoapClientGenerator: generates well commented skeleton code for a SOAP client based on a PHP class or a WSDL file
+     - abolish at least SecurityStruct and maybe also UsernameToken by dynamically creating an object without a class (aktually an instance of stdClass) at runtime
+     
 webservices identifizieren
-(martin?)	  - sowohl scan anbieten als auch explizites auswï¿½hlen von dateien auf dem server
-				welche webservices funktionalitï¿½t bereit stellen
-				explizites auswï¿½hlen von den entsprechenden php dateien und ihren abhï¿½ngigkeiten wird
+(martin?)	  - sowohl scan anbieten als auch explizites ausw?hlen von dateien auf dem server
+				welche webservices funktionalit?t bereit stellen
+				explizites ausw?hlen von den entsprechenden php dateien und ihren abh?ngigkeiten wird
 				eventuell notwendig, da es keinen standard gibt, wie die scripte zu gestallten sind
-				manche fï¿½hren beim includen schon funktionalitï¿½t aus, was gefï¿½hrlich sein kï¿½nnte
+				manche f?hren beim includen schon funktionalit?t aus, was gef?hrlich sein k?nnte
 				(z.B. deleteDatabase.php als admin script)
 
 
 libs/reflection
-(stefan)	      - weitere tags hinzufï¿½gen
-		 DONE - tool zum prï¿½fen der doku auf bestimmte aspekte
+(stefan)	      - weitere tags hinzuf?gen
+		 DONE - tool zum pr?fen der doku auf bestimmte aspekte
 (Falko)               - improve and fix XML Schema output
-		 REM  - unterstï¿½tzt werden nur einfache arrays, bei den der index nicht relevant ist,
+		 REM  - unterst?tzt werden nur einfache arrays, bei den der index nicht relevant ist,
 		        Klassen und einfach datentypen, KEINE Maps (Key=>Value) Typen
                       - rename DocTag classes into Annotiation
                       - introduce a type mixed to represent mixed types or type expressions using the | to list multiple types
@@ -106,34 +110,34 @@ REST
 		DONE  - ser/deserialisieren der eingabedaten?
 		      - objekt collections handhabung?
 		DONE  - angabe von url schemata zur identifizierung von steuerparametern
-		V2    - wie kï¿½nnte man wsdl dazu gestallten? -> WSDL2.0
-			fï¿½r Toolkit Version 2.0 vielleicht ein Generator denkbar
+		V2    - wie k?nnte man wsdl dazu gestallten? -> WSDL2.0
+			f?r Toolkit Version 2.0 vielleicht ein Generator denkbar
 			  
-		nice to have fï¿½r REST Server:
-		DONE  - beim erstellen wï¿½hlbar, ob mit oder ohne authentfizierung
-		DONE  - wahl des providers, angabe der Klasse, da eh alle Klassen geladen wurden, kï¿½nnen wir die passende Datei
-		DONE    ï¿½ber die reflection api ermitteln
-		DONE  - XSLT transformation angebbar ï¿½ber f=<zielformat> z.B. f=xbel fï¿½r die bookmarks
-		DONE  - @restin und @restout fï¿½r spezielle serializer
+		nice to have f?r REST Server:
+		DONE  - beim erstellen w?hlbar, ob mit oder ohne authentfizierung
+		DONE  - wahl des providers, angabe der Klasse, da eh alle Klassen geladen wurden, k?nnen wir die passende Datei
+		DONE    ?ber die reflection api ermitteln
+		DONE  - XSLT transformation angebbar ?ber f=<zielformat> z.B. f=xbel f?r die bookmarks
+		DONE  - @restin und @restout f?r spezielle serializer
 		DONE  - standardserializer im generator angebbar
-		DONE  - weitere serializer fï¿½r den standardparameter ?&f=<serializerkï¿½rzel>
+		DONE  - weitere serializer f?r den standardparameter ?&f=<serializerk?rzel>
 		DONE  - im generator als allgemeines und im @restin/@restout
-		DONE  - reihenfolge: angabe ï¿½ber &f -> @restin Angabe -> globale angabe, default im dd
+		DONE  - reihenfolge: angabe ?ber &f -> @restin Angabe -> globale angabe, default im dd
 		DONE  - wobei angabe &f sich nur auf ausgabe bezieht
 		
 			  - ez Style Array-Angabe array(string=>ezcFile)
-		V2	  - angabe des status-codes ï¿½ber @ muss mï¿½glich sein, um hier sinnvolle rï¿½ckgaben ermï¿½glichen zu kï¿½nnen
+		V2	  - angabe des status-codes ?ber @ muss m?glich sein, um hier sinnvolle r?ckgaben erm?glichen zu k?nnen
 		V2	  - weitere sinnvolle header senden?
-			  - known issues auflisten (erkennen der pattern abhï¿½ngig von reihenfolge im quelltext)
-			  - abhï¿½ngigkeiten von pear packages auflisten
-		V2	  - unterstï¿½tzen  der HEAD operation und der OPTIONS operation um fï¿½higkeiten/mï¿½glichkeiten der ressourcen auslesen zu kï¿½nnen
-			  - html oberflï¿½che fï¿½r REST Generator
+			  - known issues auflisten (erkennen der pattern abh?ngig von reihenfolge im quelltext)
+			  - abh?ngigkeiten von pear packages auflisten
+		V2	  - unterst?tzen  der HEAD operation und der OPTIONS operation um f?higkeiten/m?glichkeiten der ressourcen auslesen zu k?nnen
+			  - html oberfl?che f?r REST Generator
 			  - stats.php robuster gestallten
-			  - PHPDoc Tag Parser ï¿½berarbeiten, mehrzeilige kommentare an @tags ermï¿½glichen
-		V2	  - REFLECTION API: mechanismus hinzufï¿½gen, der bei fehlenden kommentaren, die elternklassen absucht um eventuell 
-			    vorhandene kommentare zu ï¿½bernehemen
+			  - PHPDoc Tag Parser ?berarbeiten, mehrzeilige kommentare an @tags erm?glichen
+		V2	  - REFLECTION API: mechanismus hinzuf?gen, der bei fehlenden kommentaren, die elternklassen absucht um eventuell 
+			    vorhandene kommentare zu ?bernehemen
 			  - mit obrigem feature auch noch einen globalen klassenobjekte cache einrichten, um die performance zu steigern.
-		V2	  - anhand der position des @param tags auf den dazugehï¿½renigen parameternamen schlieï¿½en, wenn nicht angegeben
+		V2	  - anhand der position des @param tags auf den dazugeh?renigen parameternamen schlie?en, wenn nicht angegeben
 		
 		
 !!!!!!!!	  - Anpassen der Pfade beim Generieren und kopieren der Server
