--- a/components/CodeAnalyzer/TODO
+++ b/components/CodeAnalyzer/TODO
@@ -1,5 +1,6 @@
 [done] add a php.ini if possible to prevent any code execution in the sandbox process
-   -   derive php.ini from the one of php interpreter used by the sandbox
+   -   derive php.ini from the one of the php interpreter used by the sandbox
+       (may be different if the CodeAnalyzer is integrated into a web application)
    -   implement summarizeInterfaces
    -   investigate problems with reading from pipes.
        leads to deadlogs on crawling through source tree
