- New TODO item: Document the possibility of using the PECL extension Fileinfo
git-svn-id: svn://svn.code.sf.net/p/instantsvc/code/branches/transition@1272 4c906e0b-d405-0410-8fec-a64e80c61ebf

--- a/components/CodeAnalyzer/TODO
+++ b/components/CodeAnalyzer/TODO
@@ -6,3 +6,4 @@
        leads to deadlogs on crawling through source tree
    -   implement a new class which can be ask to rate a specific metric
        on the base of some configurable values in a ini file for example
+   -   Document the possibility of using the PECL extension Fileinfo
